--- a/css/style.css
+++ b/css/style.css
@@ -187,3 +187,39 @@ footer{
     margin: 80px 3%;
   }
 }
+
+@media screen and (max-width: 425px) {
+  
+  .header-content h1{
+    font-size: 40px;
+  }
+
+  .header-content h2{
+    font-size: 12px;
+  }
+
+  .header-content {
+    padding-top: 30vh;
+  }
+
+  .header {
+    height: 100vh;
+  } 
+
+  .intro-content {
+    height: 150vh;
+    
+  }
+
+  .services {
+    height: 180vh;
+
+  }
+
+  .btn {
+    font-size: 10px;
+  }
+
+}
+  
+  
