--- a/css/style.css
+++ b/css/style.css
@@ -208,12 +208,11 @@ footer{
 
   .intro-content {
     height: 150vh;
-    
+    margin-bottom: -35vh;
   }
 
   .services {
-    height: 180vh;
-
+    height: 120vh;
   }
 
   .btn {
@@ -221,5 +220,70 @@ footer{
   }
 
 }
+
+@media screen and (max-width: 375px) {
   
+  .header-content h1{
+    font-size: 40px;
+  }
+
+  .header-content h2{
+    font-size: 10px;
+  }
+
+  .header-content {
+    padding-top: 20vh;
+  }
+
+  .header {
+    height: 80vh;
+  } 
+
+  .intro-content {
+    height: 150vh;
+    margin-bottom: -35vh;
+  }
+
+  .services {
+    height: 130vh;
+  }
+
+  .btn {
+    font-size: 8px;
+  }
+
+}
+  
+@media screen and (max-width: 375px) {
+  
+  .header-content h1{
+    font-size: 40px;
+  }
+
+  .header-content h2{
+    font-size: 8px;
+  }
+
+  .header-content {
+    padding-top: 10vh;
+  }
+
+  .header {
+    height: 60vh;
+  } 
+
+  .intro-content {
+    height: 150vh;
+    margin-bottom: -35vh;
+  }
+
+  .services {
+    height: 150vh;
+  }
+
+  .btn {
+    font-size: 4px;
+  }
+
+}
   
