--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ footer{
   padding-bottom: 30px;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .header-content h2{
     font-size: 20px;
   }
@@ -188,7 +188,8 @@ footer{
   }
 }
 
-@media screen and (max-width: 425px) {
+
+@media screen and (max-width: 476px) {
   
   .header-content h1{
     font-size: 40px;
@@ -199,67 +200,55 @@ footer{
   }
 
   .header-content {
-    padding-top: 30vh;
+    padding-top: 20vh;
+    padding-bottom: 10vh;
   }
 
   .header {
-    height: 100vh;
+    height: 10%;
   } 
 
   .intro-content {
-    height: 150vh;
-    margin-bottom: -35vh;
+    height: 30%;
+    
   }
 
   .services {
-    height: 120vh;
+    height: 10%;
+  }
+
+  .service-content {
+  margin-bottom: -10vh;
+  margin-top: 1%;
+  padding-bottom: 1%;
+
+  }
+
+  .contact-section {
+    padding-top: 40px;
   }
 
   .btn {
     font-size: 10px;
+    padding: 5%;
   }
 
 }
 
 @media screen and (max-width: 375px) {
   
-  .header-content h1{
-    font-size: 40px;
-  }
-
   .header-content h2{
     font-size: 10px;
   }
 
   .header-content {
-    padding-top: 20vh;
-  }
-
-  .header {
-    height: 80vh;
-  } 
-
-  .intro-content {
-    height: 150vh;
-    margin-bottom: -35vh;
-  }
-
-  .services {
-    height: 130vh;
-  }
-
-  .btn {
-    font-size: 8px;
+    padding-top: 10vh;
   }
 
 }
   
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 320px) {
   
-  .header-content h1{
-    font-size: 40px;
-  }
-
   .header-content h2{
     font-size: 8px;
   }
@@ -268,22 +257,5 @@ footer{
     padding-top: 10vh;
   }
 
-  .header {
-    height: 60vh;
-  } 
-
-  .intro-content {
-    height: 150vh;
-    margin-bottom: -35vh;
-  }
-
-  .services {
-    height: 150vh;
-  }
-
-  .btn {
-    font-size: 4px;
-  }
-
 }
-  
+
